updating logo and preview

--- a/jade/destinos.jade
+++ b/jade/destinos.jade
@@ -3,7 +3,7 @@ mixin slideShow(ciudad, title, slidesNumber, position)
 		.bomba
 			h3= title
 			.btn2 CON&Oacute;CE M&Aacute;S
-			img.icon(src="img/icon.png")
+			img.icon(src="https://miguel-rivas.github.io/zapp/img/favicon.ico")
 
 		.color_cover
 		.slide_show
