--- a/filter.jade
+++ b/filter.jade
@@ -1,7 +1,7 @@
 - var pageTitle = "Carnaval Presidente 2015"
 - var site = "Miguel Rivas"
 - var fbPreview = "https://miguel-rivas.github.io/img/portfolio.png"
-- var icoPath = "https://miguel-rivas.github.io/img/favicon.ico"
+- var icoPath = "https://miguel-rivas.github.io/img/favicon.png"
 - var icoBackground = "#222"
 - var description = "Filtro Carnaval Presidente 2015"
 - var keyWords = "aguacate, aguacatekun, santo, domingo, republica, dominicana"
